--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Azariill/consoleCMS#readme",
   "dependencies": {
+    "console.table": "^0.10.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "inquirer": "^8.2.4",
